[chromium] Fix ClipboardChromium::validateFilename to actually operate on extensions https://bugs.webkit.org/show_bug.cgi?id=76996

Source/WebCore:

As it turns out, we were always calling validateFilename on a data object with an empty
extension. Now we call it on an actual extension so that it's sanitized.

Reviewed by Tony Chang.

Unit test: webkit_unit_tests --gtest_filter=ClipboardChromium.*

* WebCore.gypi:
* platform/chromium/ClipboardChromium.cpp:
(WebCore::writeImageToDataObject):
* platform/chromium/ClipboardChromium.h:
(ClipboardChromium):
* platform/chromium/ClipboardChromiumLinux.cpp: Removed.
* platform/chromium/ClipboardChromiumPosix.cpp: Renamed from Source/WebCore/platform/chromium/ClipboardChromiumMac.cpp.
(WebCore):
(WebCore::isInvalidFileCharacter):
(WebCore::ClipboardChromium::validateFilename):
* platform/chromium/ClipboardChromiumWin.cpp:
(WebCore):
(WebCore::ClipboardChromium::validateFilename):

Source/WebKit/chromium:

Reviewed by Tony Chang.

* WebKit.gypi:
* tests/ClipboardChromiumTest.cpp: Added.
(WebCore):
(WebCore::TEST):

Canonical link: https://commits.webkit.org/93955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105962 268f45cc-cd09-0410-ab3c-d52691b4dbfc