Source/WebKit/chromium/WebKit.gypi
@@ -84,6 +84,7 @@
             'tests/CCTiledLayerImplTest.cpp',
             'tests/CCThreadTaskTest.cpp',
             'tests/CCTimerTest.cpp',
+            'tests/ClipboardChromiumTest.cpp',
             'tests/CompositorFakeGraphicsContext3D.h',
             'tests/CompositorFakeWebGraphicsContext3D.h',
             'tests/FakeCCLayerTreeHostClient.h',
